@@ -18,7 +18,10 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.test.util.ReflectionTestUtils;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -46,15 +49,11 @@ class BookLikeServiceImplTest {
     Book book;
     BookLike bookLike;
     BookLike bookLike1;
-    String userId;
-    String userId1;
 
     @BeforeEach
     void setUp() {
-        userId = "user1";
-        userId1 = "user2";
 
-        BookCategory category = new BookCategory(1L, "소설", null);
+        BookCategory category = new BookCategory("소설", null);
 
         book = new Book(
                 1L,
@@ -74,28 +73,27 @@ class BookLikeServiceImplTest {
                 100,
                 null,
                 new HashSet<>(),
-                Set.of(category),
-                new HashSet<>()
+                Set.of(category)
         );
-        bookLike = new BookLike(userId, book);
-        bookLike1 = new BookLike(userId1, book);
+        bookLike = new BookLike("user1", book);
+        bookLike1 = new BookLike("user2", book);
     }
 
     @Test
     @DisplayName("좋아요 생성")
     void createBookLikeSuccessTest() {
         when(bookRepository.findById(book.getId())).thenReturn(Optional.of(book));
-        when(bookLikeRepository.existsByUserIdAndBookId(userId, book.getId())).thenReturn(false);
+        when(bookLikeRepository.existsByUserIdAndBookId("user1", book.getId())).thenReturn(false);
 
-        BookLike savedBookLike = new BookLike(userId, book);
+        BookLike savedBookLike = new BookLike("user1", book);
         when(bookLikeRepository.save(any(BookLike.class))).thenReturn(savedBookLike);
         when(bookLikeRepository.findBookLikeResponseById(any())).thenReturn(Optional.of(BookLikeResponse.from(savedBookLike)));
 
-        BookLikeResponse response = bookLikeService.createBookLike(book.getId(), userId);
+        BookLikeResponse response = bookLikeService.createBookLike(book.getId(), "user1");
 
         assertThat(response).isNotNull();
         assertThat(response.bookId()).isEqualTo(1L);
-        assertThat(response.userId()).isEqualTo(userId);
+        assertThat(response.userId()).isEqualTo("user1");
     }
 
     @Test
@@ -104,51 +102,55 @@ class BookLikeServiceImplTest {
         Long bookId = book.getId();
 
         when(bookRepository.findById(book.getId())).thenReturn(Optional.of(book));
-        when(bookLikeRepository.existsByUserIdAndBookId(userId, book.getId())).thenReturn(true);
+        when(bookLikeRepository.existsByUserIdAndBookId("user1", book.getId())).thenReturn(true);
 
-        assertThatThrownBy(() -> bookLikeService.createBookLike(bookId, userId))
+        assertThatThrownBy(() -> bookLikeService.createBookLike(bookId, "user1"))
                 .isInstanceOf(BookLikeAlreadyExistsException.class);
     }
 
     @Test
     @DisplayName("유저아이디로 좋아요 리스트 조회")
     void getBookLikesByUserIdTest() {
+        Pageable pageable = PageRequest.of(0, 10);
         BookLikeResponse response1 = BookLikeResponse.from(bookLike);
-        BookLikeResponse response2 = BookLikeResponse.from(bookLike1);
+        Page<BookLikeResponse> result = new PageImpl<>(List.of(response1), pageable, 1);
 
-        when(bookLikeRepository.findBookLikeResponsesByUserId(userId)).thenReturn(List.of(response1, response2));
+        when(bookLikeRepository.findBookLikeResponsesByUserId("user1", pageable)).thenReturn(result);
 
-        List<BookLikeResponse> bookLikes = bookLikeService.getBookLikesByUserId(userId);
+        Page<BookLikeResponse> bookLikes = bookLikeService.getBookLikesByUserId("user1", pageable);
 
         assertThat(bookLikes)
-                .isNotNull()
-                .hasSize(2);
-        assertThat(bookLikes.get(0)).isEqualTo(BookLikeResponse.from(bookLike));
+                .hasSize(1);
+        assertThat(bookLikes.getContent().getFirst()).isEqualTo(BookLikeResponse.from(bookLike));
     }
 
     @Test
     @DisplayName("도서아이디로 좋아요 리스트 조회")
     void getBookLikesByBookIdTest() {
+        Long bookId = book.getId();
+        Pageable pageable = PageRequest.of(0, 10);
         BookLikeResponse response1 = BookLikeResponse.from(bookLike);
         BookLikeResponse response2 = BookLikeResponse.from(bookLike1);
+        Page<BookLikeResponse> response = new PageImpl<>(List.of(response1, response2), pageable, 2);
 
         when(bookLikeRepository.existsByBookId(book.getId())).thenReturn(true);
-        when(bookLikeRepository.findBookLikeResponsesByBookId(book.getId())).thenReturn(List.of(response1, response2));
-        List<BookLikeResponse> bookLikes = bookLikeService.getBookLikesByBookId(book.getId());
+        when(bookLikeRepository.findBookLikeResponsesByBookId(bookId, pageable )).thenReturn(response);
+        Page<BookLikeResponse> bookLikes = bookLikeService.getBookLikesByBookId(book.getId(), pageable);
 
         assertThat(bookLikes)
-                .isNotNull()
                 .hasSize(2);
-        assertThat(bookLikes.get(0)).isEqualTo(BookLikeResponse.from(bookLike));
+        assertThat(bookLikes.getContent().get(0)).isEqualTo(response1);
+        assertThat(bookLikes.getContent().get(1)).isEqualTo(response2);
     }
 
     @Test
     @DisplayName("도서아이디에 해당하는 책이 없는 경우 조회")
     void getBookLikeByBookIdFailTest() {
         Long bookId = book.getId();
+
         when(bookLikeRepository.existsByBookId(book.getId())).thenReturn(false);
 
-        assertThatThrownBy(() -> bookLikeService.getBookLikesByBookId(bookId))
+        assertThatThrownBy(() -> bookLikeService.getBookLikesByBookId(bookId, PageRequest.of(0, 10)))
                 .isInstanceOf(BookNotFoundException.class);
     }
 
@@ -156,45 +158,21 @@ class BookLikeServiceImplTest {
     @DisplayName("유저와 도서 아이디 가지고 좋아요 삭제 테스트")
     void deleteBookLikeByUserIdAndBookIdTest() {
         Long bookId = book.getId();
-        when(bookLikeRepository.existsByUserIdAndBookId(userId, bookId)).thenReturn(true);
+        when(bookLikeRepository.existsByUserIdAndBookId("user1", bookId)).thenReturn(true);
 
-        doNothing().when(bookLikeRepository).deleteByUserIdAndBookId(userId, bookId);
-        bookLikeService.deleteBookLikeByUserIdAndBookId(userId, bookId);
+        doNothing().when(bookLikeRepository).deleteByUserIdAndBookId("user1", bookId);
+        bookLikeService.deleteBookLikeByUserIdAndBookId("user1", bookId);
 
-        verify(bookLikeRepository).deleteByUserIdAndBookId(userId, bookId);
+        verify(bookLikeRepository).deleteByUserIdAndBookId("user1", bookId);
     }
 
     @Test
     @DisplayName("삭제 - 유저/도서에 해당하는 좋아요가 없는 경우")
     void deleteBookLikeByUserIdAndBookIdFailTest() {
         Long bookId = book.getId();
-        when(bookLikeRepository.existsByUserIdAndBookId(userId, bookId)).thenReturn(false);
+        when(bookLikeRepository.existsByUserIdAndBookId("user1", bookId)).thenReturn(false);
 
-        assertThatThrownBy(() -> bookLikeService.deleteBookLikeByUserIdAndBookId(userId, bookId))
-                .isInstanceOf(BookLikeNotFoundException.class);
-    }
-
-    @Test
-    @DisplayName("삭제 성공")
-    void deleteBookLikeByBookIdSuccessTest() {
-        Long bookId = book.getId();
-        when(bookRepository.existsById(book.getId())).thenReturn(true);
-        when(bookLikeRepository.existsByBookId(bookId)).thenReturn(true);
-
-        doNothing().when(bookLikeRepository).deleteByBookId(bookId);
-        bookLikeService.deleteBookLikeByBookId(bookId);
-
-        verify(bookLikeRepository, times(1)).deleteByBookId(bookId);
-    }
-
-    @Test
-    @DisplayName("삭제 실패 - 좋아요 존재하지 않은 경우")
-    void deleteBookLikeByBookIdFailTestCase1() {
-        Long bookId = book.getId();
-        when(bookRepository.existsById(book.getId())).thenReturn(true);
-        when(bookLikeRepository.existsByBookId(bookId)).thenReturn(false);
-
-        assertThatThrownBy(() -> bookLikeService.deleteBookLikeByBookId(bookId))
+        assertThatThrownBy(() -> bookLikeService.deleteBookLikeByUserIdAndBookId("user1", bookId))
                 .isInstanceOf(BookLikeNotFoundException.class);
     }
 }
